syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.dheimy00";
option java_outer_classname = "PocMicronautGRPC";
option objc_class_prefix = "HLW";

package br.com.dheimy00;

service PocMicronautGRPCService {

  rpc findAll (Empty) returns (ListaProdutoResponse) {}
  rpc save (CreateProdutoRequest) returns (ProdutoResponse) {}
  rpc get (ProdutoRequestId) returns (ProdutoResponse) {}
  rpc update (UpdateProdutoRequest) returns (ProdutoResponse) {}
  rpc delete (ProdutoRequestId) returns (Empty) {}
}

message Empty {}

message CreateProdutoRequest {
  string nome = 1;
  double preco = 2;
  int32 quantidade = 3;
  string descricao = 4;
}

message ProdutoResponse {
  string idProduto = 1;
  string nome = 2;
  double preco = 3;
  int32 quantidade = 4;
  string descricao = 5;
}

message ListaProdutoResponse {
  repeated ProdutoResponse produtos = 1;
}

message UpdateProdutoRequest {
  string idProduto = 1;
  string nome = 2;
  double preco = 3;
  int32 quantidade = 4;
  string descricao = 5;
}

message ProdutoRequestId {
  string idProduto = 1;
}